--- a/run_experiments.ipynb
+++ b/run_experiments.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -58,24 +58,18 @@
       "model=nb -P alpha=0.5 -P ngrams=1 -P idf=False -P fit_prior=False\n",
       "model=nb -P alpha=0.5 -P ngrams=2 -P idf=True -P fit_prior=True\n",
       "model=nb -P alpha=0.5 -P ngrams=2 -P idf=True -P fit_prior=False\n",
-      "model=nb -P alpha=0.5 -P ngrams=2 -P idf=False -P fit_prior=True\n",
-      "model=nb -P alpha=0.5 -P ngrams=2 -P idf=False -P fit_prior=False\n",
-      "model=nb -P alpha=2 -P ngrams=1 -P idf=True -P fit_prior=True\n",
-      "model=nb -P alpha=2 -P ngrams=1 -P idf=True -P fit_prior=False\n",
-      "model=nb -P alpha=2 -P ngrams=1 -P idf=False -P fit_prior=True\n",
-      "model=nb -P alpha=2 -P ngrams=1 -P idf=False -P fit_prior=False\n",
-      "model=nb -P alpha=2 -P ngrams=2 -P idf=True -P fit_prior=True\n",
-      "model=nb -P alpha=2 -P ngrams=2 -P idf=True -P fit_prior=False\n",
-      "model=nb -P alpha=2 -P ngrams=2 -P idf=False -P fit_prior=True\n",
-      "model=nb -P alpha=2 -P ngrams=2 -P idf=False -P fit_prior=False\n",
-      "model=log_reg -P C=1 -P ngrams=1 -P idf=True\n",
-      "model=log_reg -P C=1 -P ngrams=1 -P idf=False\n",
-      "model=log_reg -P C=1 -P ngrams=2 -P idf=True\n",
-      "model=log_reg -P C=1 -P ngrams=2 -P idf=False\n",
-      "model=log_reg -P C=4 -P ngrams=1 -P idf=True\n",
-      "model=log_reg -P C=4 -P ngrams=1 -P idf=False\n",
-      "model=log_reg -P C=4 -P ngrams=2 -P idf=True\n",
-      "model=log_reg -P C=4 -P ngrams=2 -P idf=False\n"
+      "model=nb -P alpha=0.5 -P ngrams=2 -P idf=False -P fit_prior=True\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-01b20ac67e84>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mparam_str\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict_to_param_list\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparam_dict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparam_str\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"mlflow run . --no-conda -P {param_str}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -90,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +93,7 @@
        "'mlflow run . --no-conda -P model=log_reg -P C=4 -P ngrams=2 -P idf=False'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
